--- a/src/assets/jsplumb/style/demo.css
+++ b/src/assets/jsplumb/style/demo.css
@@ -3,107 +3,77 @@
     touch-action:none;
 }
 
-.flowchart-demo .window {
+/** ELEMENT POSITIONS **/
+#dragDropWindow1 { top:76px;left:100px; }
+#dragDropWindow2 { top:148px; left:600px; }
+#dragDropWindow3 { top:340px; left:100px; }
+#dragDropWindow4 { top:416px; left:600px; }
+
+/** ELEMENTS **/
+.nn-map .window {
+    font-family: serif;
+    font-style: italic;
+    background-color: white;
     border: 1px solid #346789;
+    text-align: center;
+    z-index: 24;
+    cursor: pointer;
     box-shadow: 2px 2px 19px #aaa;
     -o-box-shadow: 2px 2px 19px #aaa;
     -webkit-box-shadow: 2px 2px 19px #aaa;
     -moz-box-shadow: 2px 2px 19px #aaa;
     -moz-border-radius: 0.5em;
     border-radius: 0.5em;
-    opacity: 0.8;
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    cursor: pointer;
-    text-align: center;
-    z-index: 20;
     position: absolute;
-    background-color: #eeeeef;
     color: black;
-    font-family: helvetica, sans-serif;
-    padding: 0.5em;
-    font-size: 0.9em;
+    padding-top: 5px;
+    width: 140px;
+    height: 120px;
+    line-height: 12px;
     -webkit-transition: -webkit-box-shadow 0.15s ease-in;
     -moz-transition: -moz-box-shadow 0.15s ease-in;
     -o-transition: -o-box-shadow 0.15s ease-in;
     transition: box-shadow 0.15s ease-in;
 }
 
-.flowchart-demo .window:hover {
+.window:hover {
+    border:1px solid #123456;
     box-shadow: 2px 2px 19px #444;
     -o-box-shadow: 2px 2px 19px #444;
     -webkit-box-shadow: 2px 2px 19px #444;
-    -moz-box-shadow: 2px 2px 19px #444;
-    opacity: 0.6;
+    -moz-box-shadow: 2px 2px 19px #fff;
+    opacity:0.9;
 }
 
-.flowchart-demo .active {
-    border: 1px dotted green;
+
+.nn-map a, .nn-map a:visited {
+    color:#057D9F;
 }
 
-.flowchart-demo .hover {
-    border: 1px dotted red;
+.nn-map a:hover {
+    color:orange;
 }
 
-#flowchartWindow1 {
-    top: 34em;
-    left: 5em;
-}
+/** LINKS IN WINDOWS **/
+.drag-locked { border:1px solid red; }
+.cmdLink { font-size:0.80em;}
 
-#flowchartWindow2 {
-    top: 7em;
-    left: 36em;
-}
+/** DRAG/DROP CLASSES **/
+.dragActive { border:2px dotted orange; }
+.dropHover { border:1px dotted red; }
 
-#flowchartWindow3 {
-    top: 27em;
-    left: 48em;
-}
-
-#flowchartWindow4 {
-    top: 23em;
-    left: 22em;
-}
-
-.flowchart-demo .jtk-connector {
-    z-index: 4;
-}
-
-.flowchart-demo .jtk-endpoint, .endpointTargetLabel, .endpointSourceLabel {
-    z-index: 21;
-    cursor: pointer;
-}
-
-.flowchart-demo .aLabel {
+/** INFO WINDOW **/
+#list {
+    text-align: center;
+    font-size: 90%;
+    width: 500px;
     background-color: white;
-    padding: 0.4em;
-    font: 12px sans-serif;
+    padding: 5px;
+    border: 1px solid #456;
+    border-radius: 8px;
     color: #444;
-    z-index: 21;
-    border: 1px dotted gray;
-    opacity: 0.8;
-    cursor: pointer;
 }
+#list table { width:100%;}
+#list table th, #list strong { color:black; font-size:12px; text-align: center; }
 
-.flowchart-demo .aLabel.jtk-hover {
-    background-color: #5C96BC;
-    color: white;
-    border: 1px solid white;
-}
-
-.window.jtk-connected {
-    border: 1px solid green;
-}
-
-.jtk-drag {
-    outline: 4px solid pink !important;
-}
-
-path, .jtk-endpoint {
-    cursor: pointer;
-}
-
-.jtk-overlay {
-    background-color:transparent;
-}
+path, .jtk-endpoint { cursor:pointer; }
